loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:9: error: '(' expected but identifier found.
        else if droite()
                ^Poucet1:11: error: illegal start of simple expression
}while(sortieTrouvee()==false)
^